--- a/public/components/Historias/style.css
+++ b/public/components/Historias/style.css
@@ -28,14 +28,16 @@
     left: 15px;
     color: rgb(92, 92, 92);
     font-size: 8px;
+    margin-top: 2px;
    
 }
 
 .flecha{
-    width: 30px;
-    left: 310px;
-    top:20px;
+    width: 20px;
+    left: 320px;
+    top:30px;
     position: absolute;
+    filter: drop-shadow(2px 4px 8px #3f3f3f);
 }
 
 .flecha2{
