--- a/public/components/Profile/style.css
+++ b/public/components/Profile/style.css
@@ -29,7 +29,7 @@
     margin-top: 80px;
 }
 .nameuser{
-    font-family:'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: light;
     color: rgb(0, 0, 0);
     position: absolute;
@@ -39,7 +39,7 @@
 }
 
 .location{
-    font-family: Helvetica;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: black;
     position:absolute;
     font-size: 10px;
@@ -49,7 +49,7 @@
 
 
 .like{
-    font-family: Helvetica;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: rgb(0, 0, 0);
     position: absolute;
     font-size: 10px;
@@ -58,7 +58,7 @@
 }
 
 .comentuser{
-    font-family: Helvetica;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: rgb(0, 0, 0);
     position: absolute;
     font-size: 10px;
@@ -70,7 +70,7 @@
 
 
 .views{
-    font-family: Helvetica;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: gray;
     font-weight: 300;
     position: absolute;
@@ -82,7 +82,7 @@
 
 
 .day{
-    font-family: Helvetica;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: gray;
     font-weight: 300;
     position: absolute;
