--- a/public/components/Register/style.css
+++ b/public/components/Register/style.css
@@ -1,38 +1,39 @@
 .contenedor{
     background-color: white;
-    width: 350px;
+    width: 370px;
     height: 400px;
-    position: absolute;
+    position: relative;
+    display: flex;
     top: 50px;
-    left: 600px;
+    margin-left: 600px;
     border: 1px solid rgba(var(--b6a,219,219,219),1);
 }
 
 .logo{
     position: absolute;
     width: 250px;
-    top:5%;
+    top:2%;
     left: 41px;
 }
 
 .opciones {
     position: absolute;
-    width: 250px;
-    top: 76%;
+    width: 260px;
+    top: 80%;
     left: 41px;
 }
 
 .linea{
     position: absolute;
     width: 100px;
-    margin-top: 82%;
+    margin-top: 81%;
     margin-left: 12%;
 }
 
 .linea2{
     position: absolute;
     width: 100px;
-    margin-top: 82%;
+    margin-top: 81%;
     margin-left: 57%;
 }
 
@@ -50,17 +51,18 @@
     font-family: Helvetica;
     font-size: 10px;
     color: gray;
-    margin-top: 100%;
+    margin-top: 73%;
     margin-left: 30%;
 }
 
 .contenedor2 {
     background-color: white;
-    width: 350px;
+    width: 370px;
     height: 65px;
-    position: absolute;
-    top: 465px;
-    right: 753px;
+    position: relative;
+    display: flex;
+    margin-top: 60px;
+    margin-left: 600px;
     border: 1px solid rgba(var(--b6a,219,219,219),1);
 }
 
@@ -103,9 +105,20 @@
 
 .mockup {
     position:absolute;
-    width: 500px;
+    width: 450px;
     top:40px;
     left:50px;
+}
+
+.textregister{
+    color: rgb(112, 112, 112);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: center;
+    font-size: 17px;
+    font-weight: 500;
+    margin-top: 80px;
+    position: absolute;
+    
 }
 
 
